--- a/privacy/index.html
+++ b/privacy/index.html
@@ -34,7 +34,7 @@
 
 <h1>Privacy Policy</h1>
 
-<p><strong>Last updated:</strong> January 2026</p>
+<p><strong>Last updated:</strong> January 27 2026</p>
 
 <p>
 This Privacy Policy explains how we collect, use, store, and protect your information when you use our services, including authorizing our application through Roblox and interacting with our Discord community. By using our services, you agree to the practices described in this policy.
