Add footer with dynamic year display and styling
Introduced a new footer section in the HTML, including styles in the CSS for proper alignment and visuals. Added a JavaScript snippet to dynamically display the current year in the footer.

--- a/index.html
+++ b/index.html
@@ -332,6 +332,14 @@
 
         <div class="spacer"></div>
     </div>
+
+    <footer class="site-footer">
+        <div class="footer-inner">
+            <span>© <span id="year"></span> Bonaire, The Netherlands</span>
+            <span class="footer-sep">•</span>
+            <span>All rights reserved</span>
+        </div>
+    </footer>
 </main>
 
 <!-- MODAL -->
