Enhance performance and add dark mode color scheme metadata
Preconnect links to Google Fonts were added to slightly improve resource loading performance. Additionally, a "color-scheme" meta tag was introduced to better support dark mode styling.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <link rel="icon" type="image/jpeg" href="/Website/Imagery/favicon.jpg">
 
+    <!-- preconnect for SLIGHTLY better performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -15,6 +19,7 @@
     <link rel="stylesheet" href="./src/css/main.css">
 
     <meta name="theme-color" content="#050505">
+    <meta name="color-scheme" content="dark">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://synthova-btnl.github.io/Website/">
