--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@ Website launch, public access rollout, core feature deployment, and platform inf
 <div class="status-row"><span class="status-dot"></span><span>Operational</span></div>
 </div>
 
-<div class="card status-card" onclick="openModal(statusAPI)">
+<div class="card status-card" onclick="openModal(statusAppeals)">
 <span class="card-tag">Appeals</span>
 <h3 class="text-white font-bold">Synthova Appeals</h3>
 <div class="status-row"><span class="status-dot"></span><span>Operational</span></div>
